Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.1
-
None
-
8a63f9ea9d53a0944e7d6975a40d4a9045cab600 et al
Description
In debug mode when hovering over the variable name then it doesn't always show the contents of the variable. Sometimes it is showing the tooltip as if it was in Editor mode.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-13908 When mousing over a variable while debugging the pop up is blank.
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-10358 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
67987,1 | Debugger: Simplify Tooltip manager interface | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |