Debugger: Simplify Tooltip manager interface

The Editor itself is not really used.

Task-number: QTCREATORBUG-10358
Change-Id: I94620ed7b3b1d6b02c4eef2a359f991217b0a00b
Reviewed-by: David Schulz <david.schulz@digia.com>